...
                                            restoreState = true
                                        }
                                    },
                                    icon = {
                                        Icon(
                                            if (currentRoute == "home") Icons.Filled.Home else Icons.Outlined.Home,
                                            contentDescription = "Home"
                                        )
                                    },
                                    label = { Text("Home") },
                                    colors = NavigationBarItemDefaults.colors(
                                        selectedIconColor = MaterialTheme.colorScheme.primary,
                                        selectedTextColor = MaterialTheme.colorScheme.primary,
...
                                            restoreState = true
                                        }
                                    },
                                    icon = {
                                        Icon(
                                            if (currentRoute == "history") Icons.Filled.DateRange else Icons.Outlined.DateRange,
                                            contentDescription = "History"
                                        )
                                    },
                                    label = { Text("History") },
                                    colors = NavigationBarItemDefaults.colors(
                                        selectedIconColor = MaterialTheme.colorScheme.primary,
                                        selectedTextColor = MaterialTheme.colorScheme.primary,
...
